[project]
name = "coxdev"
version = "0.1.2"
dependencies = ["numpy>=1.7.1",
	        "joblib",
		"pybind11",
		"scipy",
               ]
description  = "Library for computing Cox deviance"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
    {name = "Trevor Hastie", email="hastie@stanford.edu" },
    {name = "Balasubramanian Narasimhan", email="naras@stanford.edu" }
    ]  
maintainers = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
    ]
classifiers = ["Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: OS Independent",
               "Programming Language :: Python",
               "Topic :: Scientific/Engineering"
	       ]

[build-system]
requires = ["setuptools>=42",
            "wheel",
	    "pybind11",
            "numpy>=1.7.1",
            "versioneer"]
build-backend = "setuptools.build_meta"

