[project]
name = "coxdev"
dynamic = ["version"]
authors = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
    {name = "Trevor Hastie", email="hastie@stanford.edu" },
    {name = "Balasubramanian Narasimhan", email="naras@stanford.edu" }
]  
description  = "Library for computing Cox deviance"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Cox model"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy",
    "scipy",
]
maintainers = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
]

[project.optional-dependencies]
test = ['pytest',
        'pandas',
        "joblib"]
dev = [
    "pytest",
    "scipy",
    "ninja",
    "meson",
    "meson-python",
    "pybind11",
    "setuptools_scm"
]
doc = [
    "myst-parser",
    "jupyter-book",
    "pandas",
    "matplotlib",
    "rpy2"
]

[build-system]
requires = ["meson-python", "pybind11", "numpy>=1.7.1", "setuptools_scm", "ninja"]
build-backend = "mesonpy"

[tool.setuptools_scm]
# This will use the latest git tag for the version
